objects/CampaignMemberStatusTemplate__c.object
<CustomObject>
    <description>Used to set the list of available Campaign Member Status for Campaign by Product</description>
    <fields>
        <fullName>ActivityResult__c</fullName>
        <label>ActivityResult</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasResponded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasResponded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Member Status Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Label__c</columns>
        <columns>ActivityResult__c</columns>
        <columns>HasResponded__c</columns>
        <columns>IsDefault__c</columns>
        <columns>SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Member_Status_Template</fullName>
        <columns>Product__c</columns>
        <columns>Label__c</columns>
        <columns>HasResponded__c</columns>
        <columns>IsDefault__c</columns>
        <columns>SortOrder__c</columns>
        <columns>ActivityResult__c</columns>
        <filterScope>Mine</filterScope>
        <label>Campaign Member Status Template</label>
    </listViews>
    <nameField>
        <label>Campaign Member Status Template</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Status Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>